fix: background color overflows

--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -40,7 +40,6 @@
   width: 60px;
   margin-left: 0.8rem;
   border-radius: var(--border-radius);
-  background-color: var(--light-yellow);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
